[package]
name = "async-socks5"
version = "0.3.0"
authors = ["Arsenii Lyashenko <arsenylyashenko.3@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "An async/.await SOCKS5 implementation"
repository = "https://github.com/ark0f/async-socks5"
documentation = "https://docs.rs/async-socks5"
readme = "README.md"
keywords = ["tokio", "async", "socks", "proxy"]
categories = ["asynchronous", "authentication", "network-programming"]
include = ["Cargo.toml", "LICENSE-*.md", "src/**/*"]
edition = "2018"

[badges]
github-actions = { repository = "https://github.com/ark0f/async-socks5", workflow = "CI" }

[dependencies]
tokio = { version = "0.2.3", features = ["udp", "dns", "io-util"] }
thiserror = "1.0.0"
async-trait = "0.1.8"

[dev-dependencies]
tokio = { version = "0.2.3", features = ["udp", "dns", "io-util", "tcp", "macros"] }
