[package]
name = "async-socks5"
version = "0.5.1"
authors = ["Arsenii Lyashenko <arsenylyashenko.3@gmail.com>", "Temirkhan Myrzamadi <hirrolot@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "An async/.await SOCKS5 implementation"
repository = "https://github.com/ark0f/async-socks5"
documentation = "https://docs.rs/async-socks5"
readme = "README.md"
keywords = ["tokio", "async", "socks", "proxy"]
categories = ["asynchronous", "authentication", "network-programming"]
include = ["Cargo.toml", "LICENSE-*.md", "src/**/*"]
edition = "2021"

[badges]
github-actions = { repository = "https://github.com/ark0f/async-socks5", workflow = "CI" }

[dependencies]
tokio = { version = "1.0", features = ["net", "io-util"] }
thiserror = "1.0.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["net", "io-util", "rt", "macros"] }
